My eighth commit

--- a/app/src/main/res/layout-land/list_item_pet.xml
+++ b/app/src/main/res/layout-land/list_item_pet.xml
@@ -42,7 +42,7 @@
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     android:layout_margin="5dp"
-                    android:background="?android:attr/selectableItemBackground"
+                    android:background="@android:color/transparent"
                     android:contentDescription="profile picture" />
 
                 <View
