--- a/app/src/main/res/layout/list_item_pet.xml
+++ b/app/src/main/res/layout/list_item_pet.xml
@@ -49,7 +49,7 @@
                 android:minWidth="250dp"
                 android:scaleType="centerCrop"
                 android:layout_margin="5dp"
-                android:background="?android:attr/selectableItemBackground"
+                android:background="@android:color/transparent"
                 android:contentDescription="profile picture" />
 
             <TextView
