--- a/app/src/main/res/layout/list_item_advert.xml
+++ b/app/src/main/res/layout/list_item_advert.xml
@@ -13,8 +13,8 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_weight="1"
-        app:srcCompat="@drawable/dog_img"
-        android:background="@color/nice_light_gray"
+        app:srcCompat="@drawable/pet_paw"
+        android:background="@color/white"
         android:padding="1.5dp"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
@@ -43,7 +43,7 @@
             android:id="@+id/list_deal_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Location city, country"
+            tools:text="City, Country"
             android:maxLines="1"
             android:ellipsize="end"
             android:drawableStart="@drawable/ic_location_on_black_24dp"
