--- a/app/src/main/res/layout-land/list_item_pet.xml
+++ b/app/src/main/res/layout-land/list_item_pet.xml
@@ -4,13 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:padding="24dp">
+    android:padding="16dp"
+    android:paddingStart="40dp"
+    android:paddingEnd="40dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/pet_item_crdv"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         card_view:cardCornerRadius="10dp"
         android:elevation="4dp"
         android:background="?android:attr/selectableItemBackground">
@@ -25,8 +27,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="10dp"
             android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:minWidth="450dp">
+            android:paddingEnd="5dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
