--- a/app/src/main/res/layout/activity_pet_profile.xml
+++ b/app/src/main/res/layout/activity_pet_profile.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         app:fabSize="normal"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:src="@drawable/add"
+        android:src="@drawable/camera"
         app:layout_anchor="@id/appBar"
         app:layout_anchorGravity="bottom|end"
         android:clickable="true"/>
