--- a/app/src/main/res/layout/fragment_pet_info.xml
+++ b/app/src/main/res/layout/fragment_pet_info.xml
@@ -1,12 +1,310 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/timeline_listview"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:paddingTop="5dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:drawSelectorOnTop="true">
+    android:layout_height="match_parent">
 
-</ListView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@color/white"
+            android:elevation="2dp">
+
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/pet_info1"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp" />
+
+            <TextView
+                android:id="@+id/personalInformation_txtv"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="Personal Information"
+                style="@style/myTextViewStyle.myTitleStyle"
+                android:padding="10dp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1.2dp"
+            android:background="@color/nice_gray" />
+
+        <GridLayout
+            android:id="@+id/personalInformation_gridLout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:rowCount="8"
+            android:columnCount="2"
+            android:background="@android:color/white"
+            android:padding="10dp"
+            android:elevation="2dp"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Birth Date:"
+                android:layout_rowSpan="2"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill"
+                android:gravity="fill_vertical"
+                android:layout_columnWeight="1" />
+
+            <TextView
+                android:layout_row="2"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Gender:"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:layout_row="3"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Type:"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:layout_row="4"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Breed:"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:layout_row="5"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Current Weight:"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:layout_row="6"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Neutered:"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:layout_row="7"
+                android:layout_column="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Microchip:"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:id="@+id/birthDate_txtv"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_rowSpan="2"
+                android:text="12/jan/2016\n(15.9 years old)"
+                android:maxEms="8"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill"
+                android:gravity="fill_vertical"
+                android:layout_columnWeight="1" />
+
+            <TextView
+                android:id="@+id/gender_txtv"
+                android:layout_row="2"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Gender"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:id="@+id/type_txtv"
+                android:layout_row="3"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Type"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:id="@+id/breed_txtv"
+                android:layout_row="4"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Breed"
+                android:maxEms="8"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:id="@+id/weight_txtv"
+                android:layout_row="5"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Current Weight"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:id="@+id/isNeutered_txtv"
+                android:layout_row="6"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Neutered / Spayed"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+
+            <TextView
+                android:id="@+id/microchipNumber_txtv"
+                android:layout_row="7"
+                android:layout_column="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Microchip Number"
+                android:textColor="@color/primaryText"
+                android:layout_gravity="fill" />
+        </GridLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1.2dp"
+            android:background="@color/nice_gray" />
+
+        <TextView
+            android:id="@+id/breedHighlights_txtv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Highlights"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="2dp"/>
+
+        <TextView
+            android:id="@+id/breedPersonality_txtv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Personality"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="2dp" />
+
+        <TextView
+            android:id="@+id/breedHealth_txtv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Health"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="2dp"/>
+
+        <TextView
+            android:id="@+id/breedCare_txtv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Care"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="2dp"/>
+
+        <TextView
+            android:id="@+id/breedFeeding_txtv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Feeding"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="2dp"/>
+
+        <TextView
+            android:id="@+id/breedHistory_txtv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="History"
+            style="@style/myTextViewStyle.myTitleStyle"
+            android:padding="10dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:background="@color/white"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:elevation="2dp"/>
+    </LinearLayout>
+</ScrollView>
