--- a/app/src/main/res/layout/list_item_pet.xml
+++ b/app/src/main/res/layout/list_item_pet.xml
@@ -5,13 +5,16 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
-    android:padding="24dp">
+    android:paddingStart="24dp"
+    android:paddingEnd="24dp"
+    android:paddingTop="40dp"
+    android:paddingBottom="40dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/pet_item_crdv"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         card_view:cardCornerRadius="10dp"
         android:elevation="4dp"
         android:background="?android:attr/selectableItemBackground">
@@ -26,9 +29,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:minHeight="400dp"
-            android:minWidth="300dp">
+            android:paddingEnd="5dp">
 
             <TextView
                 android:id="@+id/pet_name_txtv"
@@ -46,7 +47,6 @@
                 android:layout_weight="1"
                 android:src="@drawable/pet_paw"
                 android:adjustViewBounds="true"
-                android:maxWidth="600dp"
                 android:scaleType="centerCrop"
                 android:layout_margin="5dp"
                 android:background="@android:color/transparent"
