--- a/app/src/main/res/layout/list_item_pet_care_provider.xml
+++ b/app/src/main/res/layout/list_item_pet_care_provider.xml
@@ -13,15 +13,14 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_weight="1"
-        android:src="@mipmap/ic_launcher"
-        android:background="@color/nice_light_gray"
-        android:padding="1.5dp"
+        android:src="@drawable/pet_paw"
+        android:background="@color/white"
+        android:padding="2dp"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:cropToPadding="true"
         android:layout_marginRight="2dp"
         android:layout_marginEnd="2dp" />
-    <!--app:srcCompat="@drawable/petcareprovider_profilepicture"-->
 
     <LinearLayout
         android:layout_weight="3.5"
@@ -37,38 +36,20 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:ellipsize="end"
-            android:text="Title or Name"
-            android:textColor="@color/colorPrimaryDark" />
+            android:text="Name"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_margin="2dp" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/petCareProvider_location_txtv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/petCareProvider_location_txtv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="city, country"
-                android:maxLines="1"
-                android:ellipsize="end"
-                android:scaleX=".9"
-                android:scaleY=".9"
-                android:drawableStart="@drawable/ic_location_on_black_24dp"
-                android:drawableLeft="@drawable/ic_location_on_black_24dp" />
-
-            <RatingBar
-                android:id="@+id/reviews_rtng"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/ratingBarStyleSmall"
-                android:numStars="5"
-                android:rating="3"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp" />
-        </LinearLayout>
+            android:text="city, country"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_margin="2dp"
+            android:drawableStart="@drawable/ic_location_on_black_24dp"
+            android:drawableLeft="@drawable/ic_location_on_black_24dp" />
 
         <View
             android:layout_width="match_parent"
